[tool.poetry]
name = "attribution-project"
version = "0.1.0"
description = "A complete model with attributions to twitter dataset"
authors = ["Yassine EL KHAL <ysn.el.khal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.21.0"
tokenizers = "^0.12.1"
pandas = "^1.4.3"
torch = "^1.12.0"
hydra-core = "^1.2.0"
pytorch-lightning = "^1.7.0"
datasets = "^2.4.0"
sentencepiece = "^0.1.96"
gcsfs = "^2022.7.1"
captum = "^0.5.0"
Flask = "^2.2.2"
Flask-Compress = "^1.12"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
